// Polsri Bank Sampah System - Unified DBML Specification (V1 & V2)

// ==========================================
// ENUMS DECLARATION
// ==========================================

enum gender {
  "Laki-laki"
  "Perempuan"
}

enum verification {
  "Menunggu"
  "Disetujui"
  "Ditolak"
}

enum status_sampah {
  "Pending"
  "Approved"
  "Gagal"
}

enum status_ticket {
  "Menunggu"
  "Selesai"
}

enum order_status {
  "pending"
  "proses"
  "selesai"
  "batal"
}

// ==========================================
// V1 SYSTEM TABLES
// ==========================================

Table users {
  id integer [primary key, increment]
  user_code varchar [not null, default: '0']
  name varchar [not null]
  username varchar [not null, unique]
  email varchar [not null, unique]
  email_verified_at timestamp [null]
  password varchar [not null]
  registered_by integer [null]
  remember_token varchar [null]
  two_factor_secret text [null]
  two_factor_recovery_codes text [null]
  avatar varchar [null]
  phone varchar [not null]
  no_rekening varchar [null]
  bank varchar [null]
  address varchar [not null]
  created_at timestamp
  updated_at timestamp
}

Table jenis_sampahs {
  id integer [primary key, increment]
  nama varchar [not null]
  catatan text [null]
  gambar varchar [null]
  harga integer [null]
  gramasi double [null]
  created_at timestamp
  updated_at timestamp
}

Table bank_sampahs {
  id integer [primary key, increment]
  jenis_sampah_id integer [null]
  user_id integer [null]
  qty integer [null]
  tanggal_setor varchar [null]
  status status_sampah [default: "Pending"]
  created_at timestamp
  updated_at timestamp
}

Table tabungans {
  id integer [primary key, increment]
  bank_sampah_id integer [not null]
  user_id integer [not null]
  tanggal date [not null]
  debit decimal(10,2) [null]
  kredit decimal(10,2) [null]
  sisa_saldo decimal(10,2) [not null]
  status varchar [not null, default: 'pending']
  created_at timestamp
  updated_at timestamp
}

Table products {
  id integer [primary key, increment]
  name varchar [null]
  price integer [null]
  description text [not null]
  image varchar [null]
  created_at timestamp
  updated_at timestamp
}

Table orders {
  id integer [primary key, increment]
  product_id integer [not null]
  user_id integer [not null]
  qty integer [not null]
  total_price decimal(10,2) [not null]
  description text [null]
  status order_status [default: 'pending']
  date date [not null]
  created_at timestamp
  updated_at timestamp
}

Table box_sampahs {
  id integer [primary key, increment]
  id_box varchar [not null, unique]
  latitude decimal(10,8) [not null]
  longitude decimal(11,8) [not null]
  description text [null]
  created_at timestamp
  updated_at timestamp
}

Table laporan_pengaduans {
  id integer [primary key, increment]
  box_sampah_id integer [not null]
  user_id integer [not null]
  catatan text [not null]
  created_at timestamp
  updated_at timestamp
}

Table tickets {
  id integer [primary key, increment]
  user_id integer [null]
  nomor_tiket varchar [not null]
  tanggal varchar [not null]
  judul varchar [not null]
  deskripsi varchar [not null]
  status varchar [not null]
  closed_by integer [null]
  progress_by integer [null]
  created_at timestamp
  updated_at timestamp
}

Table upload_doc_tickets {
  id integer [primary key, increment]
  file_upload varchar [null]
  ticket_id integer [null]
  user_id integer [null]
  created_at timestamp
  updated_at timestamp
}

Table upload_doc_troubles {
  id integer [primary key, increment]
  file_upload varchar [null]
  ticket_id integer [null]
  user_id integer [null]
  created_at timestamp
  updated_at timestamp
}

Table sensor_logs {
  id integer [primary key, increment]
  sensor_name varchar [null]
  value float [null]
  status tinyint(1) [null]
  created_at timestamp
  updated_at timestamp
}

Table sensor_selenoids {
  id integer [primary key, increment]
  sensor_name varchar [null]
  status tinyint(1) [null]
  created_at timestamp
  updated_at timestamp
}

Table notification_mails {
  id integer [primary key, increment]
  email varchar [null]
  created_at timestamp
  updated_at timestamp
}

Table riwayat_setors {
  id integer [primary key, increment]
  created_at timestamp
  updated_at timestamp
}

// ==========================================
// V2 SYSTEM TABLES
// ==========================================

Table masyarakats {
  masyarakat_id uuid [primary key]
  user_id integer [null]
  nik varchar(16) [not null]
  approved_by integer [null]
  identity_photo varchar [not null]
  gender gender [null]
  verification verification [default: "Menunggu"]
  poin integer [default: 0]
  voucher integer [default: 0]
  total_gramasi integer [default: 0]
  total_selesai integer [default: 0]
  created_at timestamp
  updated_at timestamp
}

Table banksampahusers {
  banksampah_id uuid [primary key]
  created_by integer [null]
  username varchar [not null]
  password varchar [not null]
  nama_bank_sampah varchar [not null]
  alamat text [null]
  kecamatan varchar [null]
  jam_operasional varchar [null]
  nomor_telepon varchar [null]
  deskripsi text [null]
  created_at timestamp
  updated_at timestamp
}

Table tiketsetorsampahs {
  tiketsampah_id uuid [primary key]
  tiketsampah_inc integer [null]
  masyarakat_id uuid [not null]
  banksampah_id uuid [not null]
  berat_sampah integer [not null]
  berat_sampah_actual integer [not null]
  poin integer [not null]
  qr_code_id varchar [not null]
  status status_ticket [default: "Menunggu"]
  created_at timestamp
  updated_at timestamp
}

Table tikettukarpoins {
  tiketpoin_id uuid [primary key]
  tiketpoin_inc integer [null]
  masyarakat_id uuid [not null]
  banksampah_id uuid [not null]
  poin integer [not null]
  qr_code_id varchar [not null]
  status status_ticket [default: "Menunggu"]
  created_at timestamp
  updated_at timestamp
}

Table artikels {
  artikel_id uuid [primary key]
  judul_artikel varchar [not null]
  gambar_artikel varchar [null]
  isi_artikel text [not null]
  created_at timestamp
  updated_at timestamp
}

Table settings {
  settings_id integer [primary key, increment]
  gram_per_point integer [not null]
  point_per_voucher integer [not null]
  created_at timestamp
  updated_at timestamp
}

// ==========================================
// RELATIONSHIPS & FOREIGN KEYS
// ==========================================

// User Self-Reference & Hierarchy
Ref: users.id < users.registered_by

// V1 User Relations
Ref: users.id < tickets.user_id
Ref: users.id < upload_doc_tickets.user_id
Ref: users.id < upload_doc_troubles.user_id
Ref: users.id < bank_sampahs.user_id
Ref: users.id < orders.user_id
Ref: users.id < tabungans.user_id
Ref: users.id < laporan_pengaduans.user_id

// Ticket Support Relations
Ref: tickets.id < upload_doc_tickets.ticket_id
Ref: tickets.id < upload_doc_troubles.ticket_id

// Waste & Savings Transactions
Ref: jenis_sampahs.id < bank_sampahs.jenis_sampah_id
Ref: bank_sampahs.id < tabungans.bank_sampah_id

// Marketplace Relations
Ref: products.id < orders.product_id

// Smart Bin Complaints Relations
Ref: box_sampahs.id < laporan_pengaduans.box_sampah_id

// V2 Core Integration Relations
Ref: users.id - masyarakats.user_id
Ref: users.id < masyarakats.approved_by
Ref: users.id < banksampahusers.created_by

Ref: masyarakats.masyarakat_id < tiketsetorsampahs.masyarakat_id
Ref: banksampahusers.banksampah_id < tiketsetorsampahs.banksampah_id

Ref: masyarakats.masyarakat_id < tikettukarpoins.masyarakat_id
Ref: banksampahusers.banksampah_id < tikettukarpoins.banksampah_id
